# BatteryRecorder

./: AGENTS.md  README.md
.agents/skills/add-setting-item/: SKILL.md
.agents/skills/add-setting-item/references/: setting-checklist.md  setting-flow.md
.agents/skills/compose-edge-to-edge-screen/: SKILL.md
.agents/skills/compose-edge-to-edge-screen/agents/: openai.yaml
.agents/skills/compose-edge-to-edge-screen/references/: edge-to-edge-checklist.md  edge-to-edge-rules.md
.agents/skills/history-stats-cache-change/: SKILL.md
.agents/skills/history-stats-cache-change/agents/: openai.yaml
.agents/skills/history-stats-cache-change/references/: cache-checklist.md  cache-rules.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/yangfentuozi/batteryrecorder/: App.kt
app/src/main/java/yangfentuozi/batteryrecorder/ipc/: BinderProvider.kt  ConfigProvider.kt  Service.kt
app/src/main/java/yangfentuozi/batteryrecorder/startup/: BootCompletedReceiver.kt  RootServerStarter.kt
app/src/main/java/yangfentuozi/batteryrecorder/ui/: BatteryRecorderApp.kt
app/src/main/java/yangfentuozi/batteryrecorder/utils/: AppDownloader.kt  AppIconMemoryCache.kt  FormatUtil.kt  UpdateUtil.kt
app/src/main/res/values/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: file_paths.xml
gradle/: libs.versions.toml
hiddenapi/stub/src/main/java/android/app/: INotificationManager.java  NotificationChannel.java
server/src/main/jni/: CMakeLists.txt  jni_main.cpp  starter.cpp
(+73 files in other folders)
